# keyboard-mate

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
kbm_cli/: main.py
